--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
+    "react-toastify": "^6.0.8",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
